// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createFsRouteTree > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "dynamic": {
          "children": {
            "[id]": {
              "children": {
                "[nested]": {
                  "value": {
                    "page": "/dynamic/[id]/[nested]/page.tsx",
                  },
                },
              },
              "value": {
                "layout": "/dynamic/[id]/layout.tsx",
                "page": "/dynamic/[id]/page.tsx",
              },
            },
            "catchall": {
              "children": {
                "[...any]": {
                  "value": {
                    "page": "/dynamic/catchall/[...any]/page.tsx",
                  },
                },
                "static": {
                  "value": {
                    "page": "/dynamic/catchall/static/page.tsx",
                  },
                },
              },
              "value": {
                "page": "/dynamic/catchall/page.tsx",
              },
            },
            "static": {
              "value": {
                "page": "/dynamic/static/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/dynamic/layout.tsx",
            "page": "/dynamic/page.tsx",
          },
        },
        "other": {
          "value": {
            "page": "/other/page.tsx",
          },
        },
        "test": {
          "children": {
            "other": {
              "value": {
                "page": "/test/other/page.tsx",
              },
            },
          },
          "value": {
            "layout": "/test/layout.tsx",
            "page": "/test/page.tsx",
          },
        },
      },
      "value": {
        "layout": "/layout.tsx",
        "not-found": "/not-found.js",
        "page": "/page.tsx",
      },
    },
  },
}
`;

exports[`createFsRouteTree > basic 2`] = `
{
  "__pathname": "/",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 3`] = `
{
  "__pathname": "/other",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/other:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "other",
        ],
      ],
      "path": "/other",
      "segment": {
        "type": "static",
        "value": "other",
      },
    },
    {
      "id": "/other:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "other",
        ],
      ],
      "path": "/other",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 4`] = `
{
  "__pathname": "/not-found",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/not-found:not-found",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "not-found",
        ],
      ],
      "path": "/not-found",
      "segment": {
        "type": "not-found",
        "value": "not-found",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 5`] = `
{
  "__pathname": "/test",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/test:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "path": "/test",
      "segment": {
        "type": "static",
        "value": "test",
      },
    },
    {
      "id": "/test:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "path": "/test",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 6`] = `
{
  "__pathname": "/test/other",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/test:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
      ],
      "path": "/test",
      "segment": {
        "type": "static",
        "value": "test",
      },
    },
    {
      "id": "/test/other:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
        [
          null,
          "other",
        ],
      ],
      "path": "/test/other",
      "segment": {
        "type": "static",
        "value": "other",
      },
    },
    {
      "id": "/test/other:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test",
        ],
        [
          null,
          "other",
        ],
      ],
      "path": "/test/other",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 7`] = `
{
  "__pathname": "/test/not-found",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/test/not-found:not-found",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "test/not-found",
        ],
      ],
      "path": "/test/not-found",
      "segment": {
        "type": "not-found",
        "value": "test/not-found",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 8`] = `
{
  "__pathname": "/dynamic",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 9`] = `
{
  "__pathname": "/dynamic/static",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic/static:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "static",
        ],
      ],
      "path": "/dynamic/static",
      "segment": {
        "type": "static",
        "value": "static",
      },
    },
    {
      "id": "/dynamic/static:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "static",
        ],
      ],
      "path": "/dynamic/static",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 10`] = `
{
  "__pathname": "/dynamic/abc",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic/abc:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
      ],
      "path": "/dynamic/abc",
      "segment": {
        "key": "id",
        "type": "dynamic",
        "value": "abc",
      },
    },
    {
      "id": "/dynamic/abc:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
      ],
      "path": "/dynamic/abc",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 11`] = `
{
  "__pathname": "/dynamic/abc/def",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic/abc:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
      ],
      "path": "/dynamic/abc",
      "segment": {
        "key": "id",
        "type": "dynamic",
        "value": "abc",
      },
    },
    {
      "id": "/dynamic/abc/def:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
        [
          "nested",
          "def",
        ],
      ],
      "path": "/dynamic/abc/def",
      "segment": {
        "key": "nested",
        "type": "dynamic",
        "value": "def",
      },
    },
    {
      "id": "/dynamic/abc/def:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "abc",
        ],
        [
          "nested",
          "def",
        ],
      ],
      "path": "/dynamic/abc/def",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 12`] = `
{
  "__pathname": "/dynamic/%E2%9C%85",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic/✅:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "✅",
        ],
      ],
      "path": "/dynamic/✅",
      "segment": {
        "key": "id",
        "type": "dynamic",
        "value": "✅",
      },
    },
    {
      "id": "/dynamic/✅:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          "id",
          "✅",
        ],
      ],
      "path": "/dynamic/✅",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 13`] = `
{
  "__pathname": "/dynamic/catchall",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "path": "/dynamic/catchall",
      "segment": {
        "type": "static",
        "value": "catchall",
      },
    },
    {
      "id": "/dynamic/catchall:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "path": "/dynamic/catchall",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 14`] = `
{
  "__pathname": "/dynamic/catchall/static",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "path": "/dynamic/catchall",
      "segment": {
        "type": "static",
        "value": "catchall",
      },
    },
    {
      "id": "/dynamic/catchall/static:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          null,
          "static",
        ],
      ],
      "path": "/dynamic/catchall/static",
      "segment": {
        "type": "static",
        "value": "static",
      },
    },
    {
      "id": "/dynamic/catchall/static:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          null,
          "static",
        ],
      ],
      "path": "/dynamic/catchall/static",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 15`] = `
{
  "__pathname": "/dynamic/catchall/x",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "path": "/dynamic/catchall",
      "segment": {
        "type": "static",
        "value": "catchall",
      },
    },
    {
      "id": "/dynamic/catchall/x:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x",
        ],
      ],
      "path": "/dynamic/catchall/x",
      "segment": {
        "key": "any",
        "type": "catchall",
        "value": "x",
      },
    },
    {
      "id": "/dynamic/catchall/x:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x",
        ],
      ],
      "path": "/dynamic/catchall/x",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 16`] = `
{
  "__pathname": "/dynamic/catchall/x/y",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "path": "/dynamic/catchall",
      "segment": {
        "type": "static",
        "value": "catchall",
      },
    },
    {
      "id": "/dynamic/catchall/x/y:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y",
        ],
      ],
      "path": "/dynamic/catchall/x/y",
      "segment": {
        "key": "any",
        "type": "catchall",
        "value": "x/y",
      },
    },
    {
      "id": "/dynamic/catchall/x/y:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y",
        ],
      ],
      "path": "/dynamic/catchall/x/y",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`createFsRouteTree > basic 17`] = `
{
  "__pathname": "/dynamic/catchall/x/y/z",
  "matches": [
    {
      "id": "/:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/dynamic:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
      ],
      "path": "/dynamic",
      "segment": {
        "type": "static",
        "value": "dynamic",
      },
    },
    {
      "id": "/dynamic/catchall:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
      ],
      "path": "/dynamic/catchall",
      "segment": {
        "type": "static",
        "value": "catchall",
      },
    },
    {
      "id": "/dynamic/catchall/x/y/z:layout",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y/z",
        ],
      ],
      "path": "/dynamic/catchall/x/y/z",
      "segment": {
        "key": "any",
        "type": "catchall",
        "value": "x/y/z",
      },
    },
    {
      "id": "/dynamic/catchall/x/y/z:page",
      "node": true,
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "dynamic",
        ],
        [
          null,
          "catchall",
        ],
        [
          "any",
          "x/y/z",
        ],
      ],
      "path": "/dynamic/catchall/x/y/z",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "a": {
          "value": {
            "page": "/a/page.js",
          },
        },
      },
      "value": {
        "page": "/page.js",
      },
    },
  },
}
`;

exports[`matchRouteTree2 > basic 2`] = `
{
  "_pathname": "/",
  "matches": [
    {
      "node": true,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": true,
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > basic 3`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "node": true,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": true,
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": true,
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > basic 4`] = `
{
  "_pathname": "/b",
  "matches": undefined,
}
`;

exports[`matchRouteTree2 > dynamic not-found 1`] = `
{
  "children": {
    "": {
      "children": {
        "[x]": {
          "children": {
            "b": {
              "children": {
                "d": {
                  "value": {
                    "page": "/[x]/b/d/page.js",
                  },
                },
              },
            },
          },
          "value": {
            "not-found": "/[x]/not-found.js",
          },
        },
        "a": {
          "children": {
            "b": {
              "children": {
                "c": {
                  "value": {
                    "page": "/a/b/c/page.js",
                  },
                },
              },
            },
          },
          "value": {
            "not-found": "/a/not-found.js",
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree2 > dynamic not-found 2`] = `
{
  "_pathname": "/a/b/c",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "b",
      },
    },
    {
      "node": {
        "page": "/a/b/c/page.js",
      },
      "segment": {
        "type": "static",
        "value": "c",
      },
    },
    {
      "node": {
        "page": "/a/b/c/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > dynamic not-found 3`] = `
{
  "_pathname": "/a/b/d",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "b/d",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > dynamic not-found 4`] = `
{
  "_pathname": "/x/b/e",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/[x]/not-found.js",
      },
      "segment": {
        "key": "x",
        "type": "dynamic",
        "value": "x",
      },
    },
    {
      "node": {
        "not-found": "/[x]/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "b/e",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "(x)": {
          "children": {
            "b": {
              "value": {
                "page": "/(x)/b/page.js",
              },
            },
            "d": {
              "children": {
                "(y)": {
                  "value": {
                    "page": "/(x)/d/(y)/page.js",
                  },
                },
              },
            },
          },
        },
        "a": {
          "value": {
            "page": "/a/page.js",
          },
        },
        "c": {
          "children": {
            "(x)": {
              "value": {
                "page": "/c/(x)/page.js",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree2 > group routes basic 2`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "page": "/a/page.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "page": "/a/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes basic 3`] = `
{
  "_pathname": "/b",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "node": {
        "page": "/(x)/b/page.js",
      },
      "segment": {
        "type": "static",
        "value": "b",
      },
    },
    {
      "node": {
        "page": "/(x)/b/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes basic 4`] = `
{
  "_pathname": "/c",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "c",
      },
    },
    {
      "node": {
        "page": "/c/(x)/page.js",
      },
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "node": {
        "page": "/c/(x)/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes basic 5`] = `
{
  "_pathname": "/d",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "d",
      },
    },
    {
      "node": {
        "page": "/(x)/d/(y)/page.js",
      },
      "segment": {
        "type": "group",
        "value": "(y)",
      },
    },
    {
      "node": {
        "page": "/(x)/d/(y)/page.js",
      },
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes not-found 1`] = `
{
  "children": {
    "": {
      "children": {
        "(x)": {
          "children": {
            "a": {
              "children": {
                "c": {
                  "value": {
                    "not-found": "/(x)/a/c/not-found.js",
                    "page": "/(x)/a/c/page.js",
                  },
                },
              },
              "value": {
                "not-found": "/(x)/a/not-found.js",
              },
            },
            "p": {
              "children": {
                "q": {
                  "value": {
                    "page": "/(x)/p/q/page.js",
                  },
                },
              },
              "value": {
                "not-found": "/(x)/p/not-found.js",
              },
            },
          },
        },
        "a": {
          "children": {
            "b": {
              "value": {
                "page": "/a/b/page.js",
              },
            },
          },
          "value": {
            "not-found": "/a/not-found.js",
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree2 > group routes not-found 2`] = `
{
  "_pathname": "/a/u",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "u",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes not-found 3`] = `
{
  "_pathname": "/a/c/u",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "node": {
        "not-found": "/a/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "c/u",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > group routes not-found 4`] = `
{
  "_pathname": "/p/u",
  "matches": [
    {
      "node": undefined,
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "node": undefined,
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "node": {
        "not-found": "/(x)/p/not-found.js",
      },
      "segment": {
        "type": "static",
        "value": "p",
      },
    },
    {
      "node": {
        "not-found": "/(x)/p/not-found.js",
      },
      "segment": {
        "type": "not-found",
        "value": "u",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > basic 1`] = `
{
  "children": {
    "": {
      "children": {
        "a": {
          "children": {
            "b": {
              "value": {
                "page": "/a/b/page.js",
              },
            },
          },
          "value": {
            "not-found": "/a/not-found.js",
            "page": "/a/page.js",
          },
        },
      },
      "value": {
        "page": "/page.js",
      },
    },
  },
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > basic 2`] = `
{
  "_pathname": "/",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/:page",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > basic 3`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/a:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "a",
        ],
      ],
      "path": "/a",
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "id": "/a:page",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "a",
        ],
      ],
      "path": "/a",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > basic 4`] = `
{
  "_pathname": "/a/b",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/a:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "a",
        ],
      ],
      "path": "/a",
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "id": "/a/b:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "a",
        ],
        [
          null,
          "b",
        ],
      ],
      "path": "/a/b",
      "segment": {
        "type": "static",
        "value": "b",
      },
    },
    {
      "id": "/a/b:page",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "a",
        ],
        [
          null,
          "b",
        ],
      ],
      "path": "/a/b",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > basic 5`] = `
{
  "_pathname": "/a/b/c",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/a:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "a",
        ],
      ],
      "path": "/a",
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "id": "/a/b/c:not-found",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "a",
        ],
        [
          null,
          "b/c",
        ],
      ],
      "path": "/a/b/c",
      "segment": {
        "type": "not-found",
        "value": "b/c",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > group routes 1`] = `
{
  "children": {
    "": {
      "children": {
        "(x)": {
          "children": {
            "b": {
              "value": {
                "page": "/(x)/b/page.js",
              },
            },
          },
        },
        "(y)": {
          "children": {
            "d": {
              "children": {
                "(z)": {
                  "value": {
                    "page": "/(y)/d/(z)/page.js",
                  },
                },
              },
            },
          },
        },
        "a": {
          "value": {
            "page": "/a/page.js",
          },
        },
        "c": {
          "children": {
            "(x)": {
              "value": {
                "page": "/c/(x)/page.js",
              },
            },
          },
        },
      },
    },
  },
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > group routes 2`] = `
{
  "_pathname": "/a",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/a:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "a",
        ],
      ],
      "path": "/a",
      "segment": {
        "type": "static",
        "value": "a",
      },
    },
    {
      "id": "/a:page",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "a",
        ],
      ],
      "path": "/a",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > group routes 3`] = `
{
  "_pathname": "/b",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/(x):layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "(x)",
        ],
      ],
      "path": "/(x)",
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "id": "/(x)/b:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "(x)",
        ],
        [
          null,
          "b",
        ],
      ],
      "path": "/(x)/b",
      "segment": {
        "type": "static",
        "value": "b",
      },
    },
    {
      "id": "/(x)/b:page",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "(x)",
        ],
        [
          null,
          "b",
        ],
      ],
      "path": "/(x)/b",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > group routes 4`] = `
{
  "_pathname": "/c",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/c:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "c",
        ],
      ],
      "path": "/c",
      "segment": {
        "type": "static",
        "value": "c",
      },
    },
    {
      "id": "/c/(x):layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "c",
        ],
        [
          null,
          "(x)",
        ],
      ],
      "path": "/c/(x)",
      "segment": {
        "type": "group",
        "value": "(x)",
      },
    },
    {
      "id": "/c/(x):page",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "c",
        ],
        [
          null,
          "(x)",
        ],
      ],
      "path": "/c/(x)",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;

exports[`matchRouteTree2 > matchRouteTree3 > group routes 5`] = `
{
  "_pathname": "/d",
  "matches": [
    {
      "id": "/:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
      ],
      "path": "/",
      "segment": {
        "type": "static",
        "value": "",
      },
    },
    {
      "id": "/(y):layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "(y)",
        ],
      ],
      "path": "/(y)",
      "segment": {
        "type": "group",
        "value": "(y)",
      },
    },
    {
      "id": "/(y)/d:layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "(y)",
        ],
        [
          null,
          "d",
        ],
      ],
      "path": "/(y)/d",
      "segment": {
        "type": "static",
        "value": "d",
      },
    },
    {
      "id": "/(y)/d/(z):layout",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "(y)",
        ],
        [
          null,
          "d",
        ],
        [
          null,
          "(z)",
        ],
      ],
      "path": "/(y)/d/(z)",
      "segment": {
        "type": "group",
        "value": "(z)",
      },
    },
    {
      "id": "/(y)/d/(z):page",
      "node": "_",
      "params": [
        [
          null,
          "",
        ],
        [
          null,
          "(y)",
        ],
        [
          null,
          "d",
        ],
        [
          null,
          "(z)",
        ],
      ],
      "path": "/(y)/d/(z)",
      "segment": {
        "type": "page",
      },
    },
  ],
}
`;
